Fixed the bugs: navigation, arrow-cursors, CSS rendering, double scroll, projects order, full screen btn, dropdowns

--- a/src/components/pageSections/Header/Header.scss
+++ b/src/components/pageSections/Header/Header.scss
@@ -2,13 +2,13 @@
 @import '../../../stylesheets/media';
 
 #site-header {
+  will-change: transform, scroll-position; // To prevent CSS rerendering in Chrome (flickering)
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 70px;
-  background-color: rgba(0, 0, 0, .5);
-  backdrop-filter: blur(8px);
+  background-color: rgba(0, 0, 0, .6);
   display: flex;
   justify-content: center;
   z-index: 2;
@@ -136,7 +136,7 @@
         top: 0;
         right: 0;
         background-color: rgba(0, 0, 0, .9);
-        -webkit-font-smoothing: antialiased; /* to stop flickering of text in safari */
+        -webkit-font-smoothing: antialiased; /* to stop flickering of text in Safari */
         transform-origin: 0% 0%;
         transform: translate(100%, 0);
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
