--- a/src/components/pages/ProjectPageTemplate/ProjectPageTemplate.scss
+++ b/src/components/pages/ProjectPageTemplate/ProjectPageTemplate.scss
@@ -2,19 +2,7 @@
 @import '../../../stylesheets/media';
 
 .page-project {
-
-  // Parallax
-  height: 150vh; // Normally 100vh is okay (fix the bug with ANT design dropdown)
-  overflow: hidden;
-
   .page-container {
-
-    // Parallax
-    transform-style: preserve-3d;
-    perspective: 100px;
-    height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
 
     // Header Image
     #header-image-section {
@@ -32,7 +20,6 @@
       @include media-small {
         height: 350px;
       }
-
       .image-container {
         background-size: cover;
         background-position: center;
@@ -43,21 +30,21 @@
         left: 0;
         right: 0;
         height: 120%;
-        transform: translateZ(-100px) translateY(-95%) scale(2); // Parallax
+        transform: translateZ(-100px) translateY(-58%) scale(2); // Parallax
         @include media-medium {
           height: 130%;
-          transform: translateZ(-100px) translateY(-100%) scale(2);
+          transform: translateZ(-100px) translateY(-70%) scale(2);
         }
         @include media-ipad-pro {
           height: 150%;
-          transform: translateZ(-100px) translateY(-145%) scale(2);
+          transform: translateZ(-100px) translateY(-110%) scale(2);
         }
         @include media-phone-land {
-          transform: translateZ(-100px) translateY(-40%) scale(2);
+          transform: translateZ(-100px) translateY(-20%) scale(2);
         }
         @include media-small {
           height: 130%;
-          transform: translateZ(-100px) translateY(-90%) scale(2);
+          transform: translateZ(-100px) translateY(-60%) scale(2);
         }
       }
       .overlay {
@@ -161,22 +148,20 @@
   
     // Main Content
     .main-content {
-      transform-style: inherit; // Parallax
       display: flex;
-      justify-content: center;
-      min-height: 100vh;
-      clip-path: polygon(0 0, 100% 0, 100% calc(100% - 100px), 0% 100%);
+      flex-direction: column;
+      align-items: center;
+      margin-top: -1px; // Bug fix in Chrome
       padding-top: 50px;
       @include media-medium {
         padding-top: 40px;
       }
       @include media-small {
         padding-top: 30px;
-        clip-path: polygon(0 0, 100% 0, 100% calc(100% - 60px), 0% 100%);
       }
 
       // Specification Section
-      .spec-section {
+      .spec-section .content-container {
         display: flex;
         margin-bottom: 30px;
         @include media-spec-block {
@@ -247,6 +232,9 @@
       
       // Body Section
       .body-section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
         margin-bottom: 60px;
         @include media-small {
           margin-bottom: 40px;
@@ -273,6 +261,9 @@
 
       // Gallery Section
       .gallery-section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
         margin-bottom: 30px;
         @include media-medium {
           margin-bottom: 20px;
